gf spacing and svg home fix moblie

--- a/css/home_styles.css
+++ b/css/home_styles.css
@@ -2956,8 +2956,7 @@ html {
     }
   
     .vector_graphic-home {
-      margin-top: -7.91em;
-      margin-bottom: -7.91em;
+
     }
   
     .is--p5 {
@@ -3005,9 +3004,7 @@ html {
     }
   
     .vector_graphic-home {
-      margin-top: -13.11em;
-      margin-bottom: -13.11em;
-      
+
     }
   
     .button-main {
